# Assistant

./: .env.sample  .gitignore  LICENSE  README.md  assistant-legacy.py  assistant.bak  assistant.py  flake.nix  pyproject.toml  realtime-assistant.py  requirements.txt  setup.sh  shell.nix  test_installation.py  voice-assistant-ctl  voice-assistant.service  voice_assistant.py
RemoteVoice/: remote-voice.service  server.py
